Fix build tags on mobile devices

--- a/styles/elements/_tag.scss
+++ b/styles/elements/_tag.scss
@@ -4,25 +4,32 @@
     flex-wrap: wrap;
     justify-content: flex-start;
 
+    ~ .tags {
+        margin-left: 0.5rem;
+    }
+
+    &.has-addons {
+        flex-wrap: nowrap;
+
+        .tag {
+            &:not(:first-child) {
+                border-bottom-left-radius: 0;
+                border-top-left-radius: 0;
+            }
+
+            &:not(:last-child) {
+                border-bottom-right-radius: 0;
+                border-top-right-radius: 0;
+                margin-right: 0;
+            }
+        }
+    }
+
     .tag {
         margin-bottom: 0.5rem;
 
         &:not(:last-child) {
-            margin-left: 0.5rem;
-        }
-    }
-
-    &.has-addons {
-        .tag {
-            &:not(:first-child) {
-                border-top-left-radius: 0;
-                border-bottom-left-radius: 0;
-            }
-
-            &:not(:last-child) {
-                border-top-right-radius: 0;
-                border-bottom-right-radius: 0;
-            }
+            margin-right: 0.5rem;
         }
     }
 }
